# volla-happ-demo

./: .gitignore  .hc  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
dnas/hello_world/workdir/: dna.yaml  hello_world.dna
dnas/hello_world/zomes/coordinator/file_storage/: Cargo.toml
dnas/hello_world/zomes/coordinator/hello_world/: Cargo.toml
dnas/hello_world/zomes/coordinator/hello_world/src/: lib.rs
dnas/hello_world/zomes/integrity/file_storage/: Cargo.toml
dnas/hello_world/zomes/integrity/hello_world/: Cargo.toml
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: holochain-app.ts  home.ts
ui/src/components/: Backup.ts  ContactList.ts  P2PSync.ts  Restore.ts  SecurityZone.ts
workdir/: happ.yaml  hello-world.happ
