[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"
holo_hash="0.1.2"
holochain_integrity_types = "=0.1.2"
serde = "1"

[workspace.dependencies.hello_world]
path = "dnas/hello_world/zomes/coordinator/hello_world"

[workspace.dependencies.hello_world_integrity]
path = "dnas/hello_world/zomes/integrity/hello_world"

[workspace.dependencies.profiles]
path = "dnas/hello_world/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/hello_world/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/hello_world/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/hello_world/zomes/integrity/file_storage"